--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,10 @@
             <artifactId>postgresql</artifactId>
             <version>42.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
